<resources>

    <string name="app_name">MyDelivery</string>

    <!-- 회원가입 -->
    <string name="register">회원가입</string>
    <string name="emailText">로그인에 사용할\n이메일을 입력해주세요.</string>
    <string name="emailInput">이메일을 입력해주세요.</string>
    <string name="duplicateCk">중복검사</string>
    <string name="authText">안전한 서비스 사용을 위해\n이메일 인증을 진행합니다.</string>
    <string name="sendAuthNum">인증번호 전송</string>
    <string name="authNumInput">인증번호를 입력해주세요.</string>
    <string name="pwText">로그인에 사용할\n비밀번호를 입력해주세요.</string>
    <string name="pwInput">비밀번호 (영문+숫자+특수문자 8자 이상)</string>
    <string name="pwCkInput">비밀번호를 한번 더 입력해주세요.</string>
    <string name="privacyText">기본 정보를\n입력해주세요.</string>
    <string name="name">닉네임</string>
    <string name="nameInput">닉네임을 입력해주세요.</string>
    <string name="phoneNum">휴대폰 번호</string>
    <string name="phoneNumInput">휴대폰 번호를 입력해주세요.</string>
    <string name="school">학교</string>
    <string name="schoolInput">학교를 입력해주세요.</string>
    <string name="completeRegister">가입 완료</string>
    <string name="completeRegisterText">회원가입이 완료되었습니다\n서비스를 이용하기 위해 로그인해주세요.</string>
    <string name="goLogin">로그인 화면으로 이동하기</string>
    <string name="next">계속하기</string>
    <string name="registerCancel1">회원가입 종료</string>
    <string name="registerCancel2">회원가입을 종료하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="loginPwInput">비밀번호를 입력해주세요.</string>
    <string name="findPw">비밀번호 찾기</string>
    <string name="modifyPw">비밀번호 재설정</string>
    <string name="newPw">새 비밀번호</string>
    <string name="newPwCk">새 비밀번호 확인</string>
    <string name="modifyPwCancel1">비밀번호 재설정</string>
    <string name="modifyPwCancel2">비밀번호 재설정을 취소하시겠습니까?</string>
    <string name="completeModifyPw">비밀번호 변경이\n완료되었습니다</string>
    <string name="moveLogin">로그인 페이지로 이동</string>

    <!-- 모집글 -->
    <string name="noRecruitList">등록된 모집글이 없습니다.</string>
    <string name="noParticipant1">참가한 모집글이 없습니다.</string>
    <string name="noParticipant2">모집글을 작성해보세요!</string>
    <string name="possibleParticipate">참가 가능</string>

    <!-- 장바구니 -->
    <string name="totalPrice">총 주문금액</string>
    <string name="upload">글 등록하기</string>
    <string name="selectTime">시간 선택</string>
    <string name="selectPerson">인원 선택</string>
    <string name="selectPlace">장소 선택</string>
    <string name="cart">장바구니</string>
    <string name="emptyOrderList">장바구니가 비어있습니다.</string>
    <string name="moveOrderList">음식 담으러 가기</string>
    <string name="insufficientPointText1">포인트 부족</string>
    <string name="insufficientPointText2">포인트가 부족합니다.\n포인트를 충전하시겠습니까?</string>

    <!-- 포인트 -->
    <string name="addPoint">충전하기</string>
    <string name="point">포인트</string>
    <string name="addPointAmount">충전할 금액을 입력해 주세요.</string>
    <string name="minimumPointAmount">최소 1000원 이상 충전 가능</string>
    <string name="plus1">+1만</string>
    <string name="plus3">+3만</string>
    <string name="plus5">+5만</string>
    <string name="plus10">+10만</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="completeAddPoint">충전 완료</string>
    <string name="currentPoint">거래 후 잔액</string>

    <string name="pwCk">비밀번호 확인</string>
    <string name="email">이메일</string>

    <string name="logout">로그아웃</string>
    <string name="quit">나가기</string>
    <string name="division">|</string>

    <string name="home">홈</string>
    <string name="find">검색</string>
    <string name="category">카테고리</string>
    <string name="post">등록글 리스트</string>
    <string name="myPost">나의 참가/등록글</string>
    <string name="myInfo">내정보</string>
    <string name="info">정보</string>

    <string name="meat">고기</string>
    <string name="lunch_box">도시락</string>
    <string name="japanese_food">일식</string>
    <string name="baekban">백반, 국수</string>
    <string name="snack">분식</string>
    <string name="asian_food">아시안</string>
    <string name="midnight_snack">야식</string>
    <string name="western_food">양식</string>
    <string name="jokbal_bossam">족발, 보쌈</string>
    <string name="chinese_food">중식</string>
    <string name="stew">찌개</string>
    <string name="chicken">치킨</string>
    <string name="dessert">디저트</string>
    <string name="fast_food">패스트 푸드</string>
    <string name="pizza">피자</string>

    <string name="minimumDeliveryPrice">최소주문금액</string>
    <string name="storeName">매장 이름</string>
    <string name="storeInfo">매장 정보</string>
    <string name="deliveryTip">배달팁</string>

    <string name="menuName">메뉴 이름</string>
    <string name="menuInfo">메뉴 설명</string>
    <string name="menuPrice">메뉴 가격</string>

    <string name="optionName">옵션이름</string>
    <string name="option">옵션</string>
    <string name="optionPrice">옵션가격</string>
    <string name="amount">수량</string>
    <string name="addCart">장바구니에 담기</string>

    <string name="registrant">등록자</string>
    <string name="deliveryTime">배달시간</string>
    <string name="recruitPerson">모집인원</string>
    <string name="place">장소</string>
    <string name="addMenu">메뉴 추가하기</string>

    <string name="recruitInfo">모집 안내</string>
    <string name="member">파티원</string>
    <string name="myDeliveryInfo">나의 배달정보</string>
    <string name="memberDeliveryInfo">파티원 배달정보</string>
    <string name="checkMenu">담은 메뉴 확인하기 > </string>
    <string name="participantType">참가타입</string>
    <string name="orderPrice">상품금액</string>
    <string name="finalPayment">결제예정금액</string>
    <string name="delete">삭제</string>
    <string name="payment">결제하기</string>

    <string name="request">요청사항</string>
    <string name="paymentPrice">결제금액</string>
    <string name="enter_request">요청사항을 입력해주세요.</string>
    <string name="enter_request_store">예) 견과류 빼주세요, 덜 맵게 해주세요</string>
    <string name="enter_request_rider">배달 시 요청사항을 적어주세요</string>

    <string name="pointHistory">포인트 이용내역</string>
    <string name="orderHistory">주문내역</string>

    <string name="order_store_History">매장 이름</string>

    <string name="goMypage">마이페이지로 이동</string>
</resources>