<?xml version="1.0" encoding="utf-8"?> <!-- 홈화면 하단바 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 카테고리 -->
    <item
        android:id="@+id/menu_category"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/category"
        app:showAsAction="always" />

    <!-- 등록글 리스트 -->
    <item
        android:id="@+id/menu_post"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/post"
        app:showAsAction="always" />

    <!-- 내 등록글 -->
    <item
        android:id="@+id/menu_myPost"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/myPost"
        app:showAsAction="always" />

    <!-- 내정보 -->
    <item
        android:id="@+id/menu_myInfo"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/myInfo"
        app:showAsAction="always" />

</menu>