<?xml version="1.0" encoding="utf-8"?> <!-- 매장 메뉴 아이템 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 메뉴 이미지 ImageView -->
        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ic_android_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!-- 메뉴 이름 -->
            <TextView
                android:id="@+id/menuNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 메뉴 설명 -->
            <TextView
                android:id="@+id/menuInfoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuInfo" />

            <!-- 메뉴 가격 -->
            <TextView
                android:id="@+id/menuPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuPrice" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>