<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- 메뉴 이미지 ImageView -->
        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/home_menu_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!-- 메뉴 이름 -->
            <TextView
                android:id="@+id/menuNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bmjua_font"
                android:text="@string/menuName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 메뉴 설명 -->
            <TextView
                android:id="@+id/menuInfoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bmjua_font"
                android:text="@string/menuInfo" />

            <!-- 메뉴 가격 -->
            <TextView
                android:id="@+id/menuPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bmjua_font"
                android:text="@string/menuPrice" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>